@@ -1,3 +1,8 @@
+2004-05-06  Zack Weinberg  <zack@codesourcery.com>
+
+	* dwarf2.c (add_line_info): Also set info->filename to NULL if
+	filename argument is null; do not call strlen on a null pointer.
+
 2004-05-06  Daniel Jacobowitz  <drow@mvista.com>
 
 	* elf32-arm.h (elf32_arm_relocate_section): Remove R_ARM_PLT32
@@ -301,7 +306,7 @@
 
 2004-04-22  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>
 
-	* hpux-core.c (hpux_core_core_file_p): Add cast in call to 
+	* hpux-core.c (hpux_core_core_file_p): Add cast in call to
 	make_bfd_asection.
 	* som.c (som_set_section_contents): Constantify second argument.
 	(hppa_som_gen_reloc_type): Abort for unsupported selectors.
@@ -558,7 +563,7 @@
 	* stabs.c (_bfd_link_section_stabs): Do not skip N_EXCL stabs.
 
 2004-03-30  Galit Heller  <Galit.Heller@nsc.com>
-            Tomer Levi    <Tomer.Levi@nsc.com>
+	    Tomer Levi    <Tomer.Levi@nsc.com>
 
 	* Makefile.am (ALL_MACHINES): Add cpu-cr16c.lo.
 	(ALL_MACHINES_CFILES): Add cpu-cr16c.c.
